# WebServer

./: .gitignore  Dockerfile  LICENSE.md  LICENSE.rst  MANIFEST.in  README.md  darstellung.html  er-diagram.puml  real_web_server.py  setup.cfg  setup.py  start.js  test.json
.github/workflows/: test-and-deploy.yml  test-application.yml
project/: __init__.py  auth.py  data_point.py  news.py  schema.sql
project/data_point/: data_point.py  routes.py
project/data_point/static/data/: test.json
project/models/: data_point.py
project/news/: news.py  routes.py
project/news/static/data/: test.json
project/static/data/: test.json
tests/: conftest.py  data.sql  test_auth.py  test_data_point.py  test_db.py  test_factory.py  test_init.py  test_news.py
