[metadata]
name = project
version = 1.0.0
url = https://github.com/Covidioten/WebServer
license = file: LICENSE.rst
maintainer = ProdIsMyDev
maintainer_email = chris@casualcompany.de
description = WebServer for covid app
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask, datetime

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    project
