[metadata]
name = project
version = attr: project.__version__
url = https://github.com/Covidioten/WebServer
author = Covidioten
author_email = chris@casualcompany.de
license = MIT
license_file = LICENSE.rst
description = Webserver for Covidioten App
long_description = file: README.rst

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
install_requires =
   flask_cors

[options.extras_require]
test =
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = project
